--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,55 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
+ion-toolbar {
+  --background: #E2EBD8;
+  color: #FFFFFF;
+  padding-bottom: 200px;
+  border-radius: 0 0 20% 20%;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+ion-header {
+  z-index: 1;
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
 
-  color: #8c8c8c;
-
-  margin: 0;
+ion-content {
+  --background: #104B51;
 }
 
-#container a {
-  text-decoration: none;
+ion-card {
+  margin-top: -100px;
+  z-index: 10;
+  overflow: visible;
+
+  ion-img {
+      width: 350px;
+      margin: -60px auto auto auto;
+  }
+
+  ion-card-title {
+    font-size: 2rem;
+    color: #E2EBD8;
+    font-weight: bold;
+    font-family: 'PT Sans', sans-serif;
+  }
+
+  ion-card-subtitle {
+    font-size: 1rem;
+    color: #E2EBD8;
+    font-weight: lighter;
+    font-family: 'PT Sans', sans-serif;
+  }
+}
+
+#img-content {
+  --background: rgba(0,0,0,0.0);
+  box-shadow: none !important;
+}
+
+ion-button {
+  --background: #FCCD00;
+  color: #104B51;
+  font-family: 'PT Sans', sans-serif;
+  font-weight: 600;
+  box-shadow: none;
+  text-transform: none;
 }
